--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="futures.html">Futures</a></li>
+                    <li><a href="features.html">Futures</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
@@ -33,7 +33,7 @@
             <div class="showcase-text">
                 <h1>Easier Deployment</h1>
                 <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the form to try a demo of our platform</p>
-                <a href="futures.html" class="btn btn-outline">Read More</a>
+                <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
 
             <div class="showcase-form card">
@@ -104,7 +104,7 @@
             <div class="text-center">
                 <h2 class="lg">Extreme Cloud Hosting</h2>
                 <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient and scalable</p>
-                <a href="futures.html" class="btn btn-dark">Read More</a>
+                <a href="features.html" class="btn btn-dark">Read More</a>
             </div>
             <img src="imgs/cloud.png" alt="">
         </div>
@@ -161,7 +161,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="futures.html">Futures</a></li>
+                    <li><a href="features.html">Futures</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
