--- a/features.html
+++ b/features.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="futures.html">Futures</a></li>
+                    <li><a href="features.html">Futures</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
@@ -78,7 +78,8 @@
             <div class="card flex">
                 <i class="fas fa-database fa-3x"></i>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
                 </p>
             </div>
             <div class="card flex">
@@ -111,7 +112,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="futures.html">Futures</a></li>
+                    <li><a href="features.html">Futures</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
